--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="header-container">
 
-            <a href="/">
+            <a href="index.html">
                 <h1 style="color: blue;" class="logo">Estacamax Estaca Hélice</h1>
             </a>
 
@@ -67,7 +67,7 @@
         <div class="whatsapp-container">
             <a href="https://api.whatsapp.com/send?phone=5519991642519&text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento%20com%20a%20Estacamax."
                 target="_blank" class="whatsapp-link">
-                💬 Solicitar orçamento via WhatsApp
+                💬 Solicitar orçamento via WhatsApp (19)99164-2519
             </a>
         </div>
     </section>
@@ -112,9 +112,9 @@
                     onclick="mostrarFoto('src/images/Eqp2.jpg')">
                 <img src="src/images/Eqp3.jpg" alt="Miniatura 3" class="icone"
                     onclick="mostrarFoto('src/images/Eqp3.jpg')">
-                <img src="src/images/helice1.png" alt="Miniatura 3" class="icone"
+                <img src="src/images/helice1.png" alt="Miniatura 4" class="icone"
                     onclick="mostrarFoto('src/images/helice1.png')">
-                <img src="src/images/estaca.jpg" alt="Miniatura 3" class="icone"
+                <img src="src/images/estaca.jpg" alt="Miniatura 5" class="icone"
                     onclick="mostrarFoto('src/images/estaca.jpg')">
             </div>
         </div>
@@ -164,22 +164,24 @@
         <h5>Entre em contato</h5><br>
         <h5>
             <a href="mailto:estacamax.estacahelice@gmail.com?subject=Orçamento%20via%20site"
-                style="color: crimson; font-weight: bold; text-decoration: none;">
+                style="color: crimson; font-weight: bold; text-decoration: none; font-size: larger;">
                 estacamax.estacahelice@gmail.com
             </a>
         </h5><br><br>
         <p>
             <a href="https://api.whatsapp.com/send?phone=5519991642519&text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento%20com%20a%20Estacamax."
                 target="_blank" style="color: green; font-weight: bold; text-decoration: none;">
-                Solicitar orçamento via WhatsApp
+                Solicitar orçamento via WhatsApp (19)99164-2519
             </a>
         </p>
 
         <nav>
             <ul>
                 <li><a href="#about">Sobre</a></li>
-                <li><a href="#services">Serviços</a></li>
-                <li><a href="#projects">Projetos</a></li>
+                <li><a href="#equip">Equipamentos</a></li>
+                <li><a href="#gal">Galeria</a></li>
+                <li><a href="#reg">Regiões</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
 
