--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estaca Max</title>
+    <title>Tech Drill</title>
 
     <link rel="icon" type="image/png" sizes="32x32" href="./src/images/ico.ico">
 
@@ -29,7 +29,7 @@
         <div class="header-container">
 
             <a href="index.html">
-                <img src="src/images/logo.png" alt="Estacamax Estaca Hélice" style="height: 60px;">
+                <img src="src/images/logo.png" alt="Estacamax Estaca Hélice" style="height: 160px;">
             </a>
 
             <nav>
@@ -67,7 +67,7 @@
         <div class="whatsapp-container">
             <a href="https://api.whatsapp.com/send?phone=5519991642519&text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento%20com%20a%20Estacamax."
                 target="_blank" class="whatsapp-link">
-                💬 Solicitar orçamento via WhatsApp (19)99164-2519
+                💬 Clique aqui → para solicitar orçamento via WhatsApp (19)99164-2519
             </a>
         </div>
     </section>
@@ -163,15 +163,15 @@
         <h4>Estacamax - Fundações Especiais</h4>
         <h5>Entre em contato</h5><br>
         <h5>
-            <a href="mailto:estacamax.estacahelice@gmail.com?subject=Orçamento%20via%20site"
+            <a href="mailto:techdrill.perfuratriz@gmail.com?subject=Orçamento%20via%20site"
                 style="color: crimson; font-weight: bold; text-decoration: none; font-size: larger;">
-                estacamax.estacahelice@gmail.com
+                📧 Clique aqui para nos mandar um email → techdrill.perfuratriz@gmail.com
             </a>
         </h5><br><br>
         <p>
             <a href="https://api.whatsapp.com/send?phone=5519991642519&text=Ol%C3%A1!%20Gostaria%20de%20solicitar%20um%20or%C3%A7amento%20com%20a%20Estacamax."
                 target="_blank" style="color: green; font-weight: bold; text-decoration: none;">
-                Solicitar orçamento via WhatsApp (19)99164-2519
+                💬 Clique aqui → para solicitar orçamento via WhatsApp (19)99164-2519
             </a>
         </p>
 
