--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="hero">
         <h2>
-            Fundações Especiais
+            Perfuratrizes de Solo
         </h2>
         <a href="#about" class="scrool-arrow"></a>
     </section>
