--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <li><a class="letra" href="#about">Sobre</a></li>
                     <li><a class="letra" href="#equip">Equipamentos</a></li>
                     <li><a class="letra" href="#gal">Galeria</a></li>
+                    <li><a class="letra" href="#videos">Vídeos</a></li>
                     <li><a class="letra" href="#reg">Regiões Atendidas</a></li>
                     <li><a class="letra" href="#contact">Contato</a></li>
                 </ul>
@@ -161,6 +162,18 @@
 
     </section>
 
+    <section class="videos" id="videos">
+        <h3>Vídeos em Ação</h3>
+        <p>Conheça mais sobre a TechDrill através de depoimentos, reportagens e demonstrações reais de perfuração de
+            poços artesianos.</p>
+
+        <div class="video-grid">
+            <iframe src="src/images/video1.mp4" title="Video01" frameborder="0" allowfullscreen></iframe>
+            <iframe src="src/images/video2.mp4" title="Video02" frameborder="0" allowfullscreen></iframe>
+            <iframe src="src/images/video3.mp4" title="Video03" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </section>
+
     <section class="services" id="reg">
 
         <div class="service">
@@ -211,6 +224,7 @@
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#equip">Equipamentos</a></li>
                 <li><a href="#gal">Galeria</a></li>
+                <li><a href="#videos">Vídeos</a></li>
                 <li><a href="#reg">Regiões</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
