Ajuste nos videos

--- a/index.html
+++ b/index.html
@@ -168,11 +168,23 @@
             poços artesianos.</p>
 
         <div class="video-grid">
-            <iframe src="src/images/video1.mp4" title="Video01" frameborder="0" allowfullscreen></iframe>
-            <iframe src="src/images/video2.mp4" title="Video02" frameborder="0" allowfullscreen></iframe>
-            <iframe src="src/images/video3.mp4" title="Video03" frameborder="0" allowfullscreen></iframe>
+            <video controls>
+                <source src="src/images/video1.mp4" type="video/mp4">
+                Seu navegador não suporta vídeo.
+            </video>
+
+            <video controls>
+                <source src="src/images/video2.mp4" type="video/mp4">
+                Seu navegador não suporta vídeo.
+            </video>
+
+            <video controls>
+                <source src="src/images/video3.mp4" type="video/mp4">
+                Seu navegador não suporta vídeo.
+            </video>
         </div>
     </section>
+    
 
     <section class="services" id="reg">
 
